# prophet-cpp

./: .gitignore  CMakeLists.txt  K.txt  README.md  T1.txt  X.txt  bld.sh  delta.txt  k1.txt  s_a.txt  sigmas.txt  t.txt  t_change.txt  tau.txt  y.txt
data/: S.txt  TREND_OUT.txt  cap.txt  m.txt  s_m.txt  sigma_obs.txt
include/: csv.h  funcs.hpp  prophet.hpp  prophet_model.hpp  prophet_var_context.hpp  table.hpp  time_delta.hpp  vecops.hpp
src/: dataframe_test.cpp  prophet.cpp  time_test.cpp
tests/src/: tests.cpp
tests/src/data/: dates.txt  make_seasonality_features_valid.txt  piecewise_linear_valid.txt  predict_trend_valid.txt  t.txt
